--- a/src/home-insurance/20.3-business-details.html
+++ b/src/home-insurance/20.3-business-details.html
@@ -142,54 +142,26 @@
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:20%">
-
+                                        aria-valuemax="100" style="width:100%">
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Personal Information</div>
+                                <div class="progress-text mt-1">Property Information</div>
+                            </div>
+                            <div class="col">
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100" style="width:50%">
+                                    </div>
+                                </div>
+                                <div class="progress-text mt-1">Home details</div>
                             </div>
                             <div class="col">
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                         aria-valuemax="100" style="width:0%">
-
                                     </div>
-
                                 </div>
-                                <div class="progress-text mt-1">Property Information
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Insurance Considerations</div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Property facts
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100" style="width:0%">
-
-                                    </div>
-
-                                </div>
-                                <div class="progress-text mt-1">Additional Coverages</div>
+                                <div class="progress-text mt-1">Coverages</div>
                             </div>
                         </div>
                         <a class="text-blue ms-3 back-arrow" href="#"><i class="fa fa-arrow-left-long me-2"></i>BACK</a>
@@ -212,48 +184,64 @@
 
                                                     <div class="f-dropdown selectDropdown"><select
                                                             class="f-control f-dropdown" placeholder="Type of business"
-                                                            id="selectbuss">
-                                                            <option value="">Type of business</option>
-
-                                                            <option value="Daycare" selected>Daycare</option>
-                                                            <option value="21" >Home Office</option>
-                                                            <option value="2">Internet Sales</option>
-                                                            <option value="12">Hair Salon</option>
-                                                            <option value="312">Consulting</option>
-                                                            <option value="312">Counseling</option>
-                                                            <option value="312">Dentist</option>
-                                                            <option value="312">Chiropractor</option>
-                                                            <option value="312">Personal Training</option>
-                                                            <option value="312">Antique Shop</option>
-                                                            <option value="31">Construction/Wood Work</option>
-                                                            <option value="31">Farm</option>
-                                                            <option value="3">Trucking</option>
-
+                                                            value="Daycare"
+                                                            id="selectCity">
+                                                            <option value="1" selected>Type of business</option>
+                                                            <option value="2">Construction</option>
+                                                            <option value="3">Carpentry</option>
+                                                            <option value="4">Siding</option>
+                                                            <option value="5">Framing</option>
+                                                            <option value="6">Flooring</option>
+                                                            <option value="7">Janitorial (cleaning commercial or home) </option>
+                                                            <option value="8">Landscaper</option>
+                                                            <option value="9">Painting</option>
+                                                            <option value="10">Drywall & Plaster</option>
+                                                            <option value="11">Insulation</option>
+                                                            <option value="12">Auto Repair</option>
+                                                            <option value="13">Collision Center </option>
+                                                            <option value="14">Auto Dealers</option>
+                                                            <option value="15">Restaurant </option>
+                                                            <option value="16">Fast Food </option>
+                                                            <option value="17">Store  (grocery)</option>
+                                                            <option value="18">Professional Office    (realtor, Lawer, ect.)</option>
+                                                            <option value="19">Doctor </option>
+                                                            <option value="20">Med Spa</option>
+                                                            <option value="21">Veterinarian</option>
+                                                            <option value="22">Trucking</option>
+                                                            <option value="23">Dog Day Care</option>
+                                                            <option value="24">Grooming (pets)</option>
+                                                            <option value="25">Child Day Care </option>
+                                                            <option value="26">Hair Salon / Barber </option>
+                                                            <option value="27">Nail Salon</option>
+                                                            <option value="28">Coffee Shop </option>
+                                                            <option value="29">Bakery</option>
+                                                            <option value="30">Nutrition</option>
+                                                            <option value="31" selected>Daycare</option>
                                                         </select>
-
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class=" col-12">
+                                            <div class="col-12">
                                                 <input type="number" class="form-control"
                                                     placeholder="How many kids attend?">
                                             </div>
+                                            
                                             <div class="col-12">
                                                 <div class="form-group">
                                                     <label for="" class="fs-18 font-bold">Are there Walk in clients?</label>
                                                     <div class="d-flex justify-content-start">
                                                         <div class="d-flex align-self-center me-3">
-                                                            <label class="radio-inline radio-btn" for="divingYes">
-                                                                <input class="radio-control" type="radio" name="willing"
-                                                                    value="" id="divingYes" checked="">
+                                                            <label class="radio-inline radio-btn" for="walkYes">
+                                                                <input class="radio-control" type="radio" name="walk"
+                                                                    value="" id="walkYes">
                                                                 <span class="radio-custom"></span>
                                                                 <span class="radio-label fs-14">Yes </span>
                                                             </label>
                                                         </div>
                                                         <div class="d-flex align-self-center me-3">
-                                                            <label class="radio-inline radio-btn" for="divingNo">
-                                                                <input class="radio-control" type="radio" name="willing"
-                                                                    value="" id="divingNo">
+                                                            <label class="radio-inline radio-btn" for="walkNo">
+                                                                <input class="radio-control" checked type="radio" name="walk"
+                                                                    value="" id="walkNo">
                                                                 <span class="radio-custom"></span>
                                                                 <span class="radio-label fs-14">No </span>
                                                             </label>
@@ -261,37 +249,33 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-12">
+                                            <!-- <div class="col-12">
                                                 <div class="form-group">
-                                                    <label for="" class="fs-18 font-bold">Is there a separate liability policy covering this business?</label>
+                                                    <label for="" class="fs-18 font-bold">Do you need coverage for your business under this policy?</label>
                                                     <div class="d-flex justify-content-start">
                                                         <div class="d-flex align-self-center me-3">
-                                                            <label class="radio-inline radio-btn" for="willing2N">
+                                                            <label class="radio-inline radio-btn" for="coverage1">
                                                                 <input class="radio-control" type="radio"
-                                                                    name="willing2" value="" id="willing2N" checked="">
+                                                                    name="coverage" value="" id="coverage1" checked="">
                                                                 <span class="radio-custom"></span>
                                                                 <span class="radio-label">Yes </span>
                                                             </label>
                                                         </div>
                                                         <div class="d-flex align-self-center me-3">
-                                                            <label class="radio-inline radio-btn" for="willing2">
+                                                            <label class="radio-inline radio-btn" for="coverage2">
                                                                 <input class="radio-control" type="radio"
-                                                                    name="willing2" value="" id="willing2">
+                                                                    name="coverage" value="" id="coverage2">
                                                                 <span class="radio-custom"></span>
                                                                 <span class="radio-label">No </span>
                                                             </label>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <!-- <div class="col-12">
-                                                <input type="number" class="form-control"
-                                                    placeholder="No. of clients visit a year">
                                             </div> -->
                                             <div class="col-12">
                                                 <div class="form-group">
                                                     <label for="" class="fs-18 font-bold">
-                                                        Any alteration to this property for this business?
+                                                        Is there a separate liability policy covering this business?
                                                     </label>
                                                     <div class="d-flex justify-content-start">
                                                         <div class="d-flex align-self-center me-3">
@@ -313,7 +297,32 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                           
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label for="" class="fs-18 font-bold">
+                                                        Any alteration to this property for this business?
+                                                    </label>
+                                                    <div class="d-flex justify-content-start">
+                                                        <div class="d-flex align-self-center me-3">
+                                                            <label class="radio-inline radio-btn" for="willing2N">
+                                                                <input class="radio-control" type="radio"
+                                                                    name="willing2" value="" id="willing2N" checked="">
+                                                                <span class="radio-custom"></span>
+                                                                <span class="radio-label">Yes </span>
+                                                            </label>
+                                                        </div>
+                                                        <div class="d-flex align-self-center me-3">
+                                                            <label class="radio-inline radio-btn" for="willing2">
+                                                                <input class="radio-control" type="radio"
+                                                                    name="willing2" value="" id="willing2">
+                                                                <span class="radio-custom"></span>
+                                                                <span class="radio-label">No </span>
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                             <div class="col-12">
                                                 <label for="">
                                                     <textarea name="" id="" cols="30" rows="3" class="form-control pt-2 h-auto" placeholder="Please describe alteration"></textarea>
